# lp-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  agent.config.example.ts  package.json  tsconfig.json  项目.md
docs/: README.md  backtest-framework-design.md  data-sources.md  decision-engine-design.md  decision-remove-center-prediction.md  forecasting-approach.md  implementation-plan-v1.md  module-and-testing.md  prediction-service-design.md  project-background.md  project-overview.md  risk-monitoring-design.md  seal-integration.md  treasury-role-design.md  x-article.md
fixtures/: suiusdc-1m-1d.csv
ml/: .gitignore  pyproject.toml
ml/backtest/: fee_model.py  l1_runner.py
ml/data/: alignment.py  labels.py  parquet_writer.py
ml/data/collectors/: binance_derivatives.py  binance_klines.py
ml/features/: anchor.py  cross_asset.py  derivatives.py  momentum.py  registry.py  time.py  volatility.py
ml/serving/: app.py  psi.py  registry.py
ml/tests/: conftest.py  test_alignment.py  test_features.py  test_fee_model.py  test_l1_runner.py  test_labels.py  test_parquet_writer.py  test_psi.py  test_serving.py  test_walk_forward.py
ml/training/: export.py  train_quantile.py  train_vol.py  walk_forward.py
scripts/: README.md  backfill-cetus-events.ts  bootstrap-agent-key.ts  collect-historical.ts  fund-address-balance.ts  print-events.ts  probe-bin-orientation.ts  probe-cdpm-package.ts  risk-reset-emergency.ts  seed-demo-data.ts  seed-fixture.ts  serve-demo-api.ts  shadow-report.ts  treasury-list-balances.ts  treasury-list-users.ts  treasury-refund.ts  (+6 more)
(+200 files in other folders)
