[project]
name = "liquiditymanager-ml"
version = "0.1.0"
description = "ML pipeline for LiquidityManager: data collection, feature engineering, LightGBM quantile training, FastAPI inference sidecar, L1 backtest (implementation-plan-v1.md)"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
